Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 14.0.0-beta2
-
-
3572fdce0 (14.0)
Description
I'm not installing cmake from the Qt installer.
Starting QC with clean settings and no Qt in PATH just set up the auto detected Kits (Desktop 32bit and 64bit, not Qt, no cmake)
Then using Link with Qt with a Qt installation holding a couple of Qt versions (5.x, 6.6.x, MSVC & MinGW) and restarting created correctly the respective Qt versions and kits. (still no cmake)
Then I've added a cmake inside the settings and wanted to create a simple Qt Quick app (used the compat version)
Only selected the MinGW kit and proceeded - the build failed due to having no generator set.
(the MSVC kits also are missing a valid generator, but at least they don't fail - but they unexpectedly use now msbuild if I see this correctly)
So, MinGW should definitely get a different default generator.
For MSVC kits I'm not completely sure. Although I thought the most of the infrastructure we're using was focussed on using nmake/jom instead.